<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.lycyic.csi_week_1.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_height="169dp"
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/gru"
            android:id="@+id/imageView4"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:background="@color/colorPrimaryOpaque"
                android:gravity="center">

                <TextView
                    android:text="@string/labelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:text="@string/badguyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="8dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:background="@color/colorPrimaryOpaque"
                android:gravity="center">

                <TextView
                    android:text="@string/labelGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:text="@string/badguyGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="8dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:background="@color/colorPrimaryOpaque"
                android:gravity="center">

                <TextView
                    android:text="@string/labelAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="normal|bold"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:text="@string/badguyAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="8dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:background="@color/colorPrimaryOpaque"
                android:gravity="center">

                <TextView
                    android:text="@string/labelBounty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="normal|bold"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:text="@string/badguyBounty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textStyle="normal|bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="8dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:text="@string/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="normal|bold"
            android:textSize="12sp"
            android:layout_margin="4dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbarStyle="insideOverlay"
            android:fillViewport="false"
            android:clipToPadding="false"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/badguyDetails"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnReport"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:drawable/btn_default_small"
            android:elevation="0dp"
            android:text="@string/report"
            android:onClick="sendReport"/>
    </LinearLayout>

</LinearLayout>
